enhanced website design

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 </head>
 
 <body id="body">
-  <div id="container">
     <!-- preloader -->
     <div id="video-loader">
         <video src="website/web_images/loader.mp4" alt="Dataverse" autoplay muted>Your browser does not support the
@@ -64,30 +63,24 @@
     <div class="plane" id="plane">
         <table>
             <tr>
-                <td><a href="./website/pages/support.html" class="table_link">Help Center</a></td>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
+                <td><a href="index.html"
+                        class="table_link">Home</a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
                         class="table_link">Documentation</a></td>
             </tr>
             <tr>
-                <td><a href="website/pages/contributor.html" class="table_link">Contributors</a></td>
+                <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
             </tr>
             <tr>
-                <td>
-                    <a href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design"
-                        class="table_link">Figma Design</a>
-                </td>
+                <td><a href="./website/pages/support.html" class="table_link">Support</a></td>
             </tr>
             <tr>
-                <td><a href="../pages/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct</a>
-                </td>
+                <td><a href="./website/pages/license.html" class="table_link">License</a></td>
             </tr>
             <tr>
-                <td><a href="../pages/license.html" class="table_link">License</a></td>
+                <td><a href="./website/pages/contributor.html" class="table_link">Contributors</a></td>
             </tr>
         </table>
     </div>
@@ -233,7 +226,7 @@
             <a href="https://github.com/multiverseweb/Dataverse?tab=readme-ov-file#contributions"
                 target="_blank"><button id="contribute">
                     <p>Contribute</p><img
-                        src="https://static-00.iconduck.com/assets.00/github-icon-2048x1999-d37ckpm6.png" id="github">
+                        src="website/web_images/github.png" id="github">
                 </button></a>
         </div>
         <div class="develop_right">
@@ -320,7 +313,6 @@
     </div>
     </div>
     <div class="end_line"></div>
- </div> <!--End of div.container --> 
     
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="website/scripts/script.js" type="module"></script>
