--- a/website/pages/support.html
+++ b/website/pages/support.html
@@ -64,27 +64,20 @@
                     <td><a href="../../index.html" class="table_link">Home</a></td>
                 </tr>
                 <tr>
-                    <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
-                </tr>
-                <tr>
                     <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
                             class="table_link">Documentation</a></td>
                 </tr>
                 <tr>
-                    <td><a href="../pages/contributor.html" class="table_link">Contributors</a></td>
+                    <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
                 </tr>
                 <tr>
-                    <td>
-                        <a href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design"
-                            class="table_link">Figma Design</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td><a href="../pages/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct</a>
-                    </td>
+                    <td><a href="support.html" class="table_link">Support</a></td>
                 </tr>
                 <tr>
                     <td><a href="../pages/license.html" class="table_link">License</a></td>
+                </tr>
+                <tr>
+                    <td><a href="../pages/contributor.html" class="table_link">Contributors</a></td>
                 </tr>
             </table>
         </div>
