changed documentation link

--- a/website/pages/contributor.html
+++ b/website/pages/contributor.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-    <button class="top" id="top" onclick="topFunction()"><img src="website/web_images/top.webp" alt=""></button>
     <nav id="navbar">
         <img src="../web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="../web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
@@ -37,7 +36,7 @@
                         class="table_link">Home</a></td>
             </tr>
             <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
+                <td><a href="../../documentation.html"
                         class="table_link">Documentation</a></td>
             </tr>
             <tr>
