--- a/website/pages/support.html
+++ b/website/pages/support.html
@@ -64,7 +64,7 @@
                     <td><a href="../../index.html" class="table_link">Home</a></td>
                 </tr>
                 <tr>
-                    <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
+                    <td><a href="../../documentation.html"
                             class="table_link">Documentation</a></td>
                 </tr>
                 <tr>
