--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         class="table_link">Home</a></td>
             </tr>
             <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
+                <td><a href="documentation.html"
                         class="table_link">Documentation</a></td>
             </tr>
             <tr>
