--- a/index.html
+++ b/index.html
@@ -269,16 +269,16 @@
             <div class="link_class">
                 <a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
                     class="table_link">Documentation</a>
-                <a href="./website/pages/contributor.html" class="table_link">Contributors</a>
-                <a href="website/pages/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct</a>
-                <a href="website/pages/license.html" class="table_link">License</a>
+                    <a href="https://github.com/multiverseweb/Dataverse"
+                        class="table_link">GitHub Repository</a>
+                        <a href="website/pages/support.html" class="table_link" target="_blank">Support</a>
+                        <a href="website/pages/license.html" class="table_link">License</a>
             </div>
             <div class="link_class">
-                <a href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design"
-                    class="table_link">Figma Design</a>
-                <a href="https://tejasgupta.netlify.app">Portfolio</a>
-                <a href="https://github.com/multiverseweb">Github Profile</a>
-                <a href="https://www.linkedin.com/in/tejascodes/"> LinkedIn</a>
+                <a href="./website/pages/contributor.html" class="table_link">Contributors</a>
+                <a href="https://tejasgupta.netlify.app">Owner's Portfolio</a>
+                <a href="https://www.linkedin.com/in/tejascodes/">Owner's LinkedIn</a>
+                <a href="https://github.com/multiverseweb">Owner's GitHub Profile</a>
             </div>
             <script>
                 function validateFeedback() {
@@ -305,8 +305,8 @@
 
         </div>
         <div class="end_line"></div>
-        <p class="tejas_credits" style="color:rgb(187, 187, 187); margin-top: 20px;"> Designed & Developed by Tejas
-            Gupta</p>
+        <p class="tejas_credits" style="color:rgb(187, 187, 187); margin-top: 20px;"> Designed & Developed by <a href="404.html">Tejas
+            Gupta</a></p>
         <br>
         <p style="color:rgb(177, 177, 177);">&copy; <span id="copyright">32949832</span> <a
                 href="404.html">Tejas Gupta</a></p>
