added infinity image

--- a/website/pages/support.html
+++ b/website/pages/support.html
@@ -89,7 +89,8 @@
         <main>
             <div class="category" id="infinity">
                 <p class="heading">Need Help?</p>
-                Try asking Infinity
+                <p id="infinityText">Try asking Infinity</p>
+                <img src="../web_images/Infinity-2.png" alt="" class="infinityImage">
             </div>
             <div class="category" id="faq">
                 <p class="heading">Frequently Asked Questions</p>
