--- a/index.html
+++ b/index.html
@@ -266,20 +266,23 @@
             </div>
         <div class="small">
             <div class="link_class">
-                <p class="link-category">Software</p>
+                <p class="link-category">Software Details</p>
+                <a href="404.html" class="table_link">Versions</a>
                 <a href="website/pages/license.html" class="table_link">License</a>
                 <a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
                     class="table_link">Documentation</a>
                 <a href="https://github.com/multiverseweb/Dataverse" class="table_link">GitHub Repository</a>
             </div>
             <div class="link_class">
-                <p class="link-category">Navigate</p>
+                <p class="link-category">Help & Information</p>
                 <a href="website/pages/support.html" class="table_link" target="_blank">Support</a>
                 <a href="sitemap.xml" class="table_link" target="_blank">Sitemap</a>
+                <a href="404.html" class="table_link">Reviews</a>
                 <a href="./website/pages/contributor.html" class="table_link">Contributors</a>
             </div>
             <div class="link_class">
                 <p class="link-category">More to Explore</p>
+                <a href="404.html" class="table_link">Stunning Visuals</a>
                 <a href="https://tejasgupta.netlify.app">Owner's Portfolio</a>
                 <a href="https://www.linkedin.com/in/tejascodes/">Owner's LinkedIn</a>
                 <a href="https://github.com/multiverseweb">Owner's GitHub Profile</a>
