--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <p class="link-category">Software Details</p>
                 <a href="404.html" class="table_link">Versions</a>
                 <a href="website/pages/license.html" class="table_link">License</a>
-                <a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
+                <a href="documentation.html"
                     class="table_link">Documentation</a>
                 <a href="https://github.com/multiverseweb/Dataverse" class="table_link">GitHub Repository</a>
             </div>
