--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
                 <p id="csstag">CSS</p>
                 <p id="jstag">JavaScript</p>
                 <p id="exceltag">MS Excel</p>
+                <p id="netlifytag">Netlify</p>
+                <p id="htmltag">Postman</p>
             </div>
             <p class="text">As this is an open-source project, contributions are always welcome. Whether you're
                 interested in adding new features, fixing bugs, or improving documentation, your contributions are
