--- a/website/pages/license.html
+++ b/website/pages/license.html
@@ -31,7 +31,7 @@
     <nav id="navbar">
         <img src="../web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="../web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
-        <a href="website/pages/login.html">
+        <a href="login.html">
             <button class="navbarButton">
                 <span class="button-text">Login</span>
                 <img src="../web_images/user.png" alt="User Icon" class="user-icon">
