--- a/website/pages/support.html
+++ b/website/pages/support.html
@@ -88,16 +88,17 @@
 
         <main>
             <button id="infinityBtn" onclick="showChat()">
-            <div class="category" id="infinity">
-                <p class="heading">Need Help?</p>
-                <p id="infinityText">Try asking Infinity</p>
-                <img src="../web_images/Infinity-2.png" alt="" class="infinityImage" id="infinityImg">
+                <div class="category" id="infinity">
+                    <p class="heading">Need Help?</p>
+                    <p id="infinityText">Try asking Infinity</p>
+                    <img src="../web_images/Infinity-2.png" alt="" class="infinityImage" id="infinityImg">
                 </div>
             </button>
             <iframe src="https://www.chatbase.co/chatbot-iframe/oKgfHa3hvh7Ic0ypSqDbv" width="100%"
-                style="height: 100%; min-height: 500px; display:none; margin-top: 20px; border-radius: 20px;" id="infinityChat" frameborder="0"></iframe>
-                <div class="category" id="faq">
-            
+                style="height: 100%; min-height: 500px; display:none; margin-top: 20px; border-radius: 20px;"
+                id="infinityChat" frameborder="0"></iframe>
+            <div class="category" id="faq">
+
                 <p class="heading">Frequently Asked Questions</p>
                 <details>
                     <summary>What is Dataverse?</summary>
@@ -127,15 +128,19 @@
                         Feel free to reach out for help!</p>
                 </details>
             </div>
-            <div class="category" id="issue">
-                <p class="heading">Encountered an Issue?</p>
-                <button class="design_btn" onclick="showReportForm()">Report Issue</button>
+            <div class="in-line">
+                <div class="category" id="issue">
+                    <p class="heading">Encountered an Issue?</p>
+                    <button class="design_btn" onclick="showReportForm()">Report Issue</button>
+                    <img src="../web_images/issue.webp" alt="" class="issueImage">
+                </div>
+                <div class="category">
+                    <p class="heading">Still have Doubts?</p>
+                    <a href="mailto:multiverse.letter@gmail.com"><button class="design_btn">Email Us</button></a>
+                    <img src="../web_images/doubt.png" alt="" class="issueImage" id="doubt">
+                </div>
             </div>
-            <div class="category" id="issue">
-                <p class="heading">Still have Doubts?</p>
-                <a href="mailto:multiverse.letter@gmail.com"><button class="design_btn">Email Us</button></a>
-            </div>
-            <div class="category" id="issue">
+            <div class="category">
                 <p class="heading">Support the Development of Dataverse</p>
                 As an open-source initiative, we depend on community support to sustain and enhance the project. Your
                 contributions will help us:
