--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <p class="link-category">Help & Information</p>
                 <a href="website/pages/support.html" class="table_link" target="_blank">Support</a>
                 <a href="sitemap.xml" class="table_link" target="_blank">Sitemap</a>
-                <a href="404.html" class="table_link">Reviews</a>
+                <a href="website/pages/reviews.html" class="table_link">Reviews</a>
                 <a href="./website/pages/contributor.html" class="table_link">Contributors</a>
             </div>
             <div class="link_class">
