--- a/website/pages/reviews.html
+++ b/website/pages/reviews.html
@@ -6,11 +6,13 @@
   <link rel="shortcut icon" href="../web_images/3dlogo.svg" type="image/x-icon">
   <title>Dataverse Reviews</title>
   <link rel="stylesheet" href="../styles/reviews.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
 
   <div class="reviewContainer">
     <p class="reviewHeading">Dataverse Reviews</p>
+    <div id="average-rating"></div>
     <div id="reviews-container" class="reviews-container">
       <!-- Reviews will be dynamically inserted here -->
     </div>
