--- a/documentation.html
+++ b/documentation.html
@@ -53,6 +53,7 @@
         }
 
         #navbar_table {
+            width: 100%;
             border: none;
         }
 
@@ -101,7 +102,7 @@
                 <td><a href="index.html" class="table_link">Home</a></td>
             </tr>
             <tr>
-                <td><a href="documentation.html" class="table_link">Documentation</a></td>
+                <td id="current"><a href="documentation.html" class="table_link">Documentation</a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
