--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="plane" id="plane">
         <table>
             <tr>
-                <td><a href="index.html" class="table_link">Home</a></td>
+                <td id="current"><a href="index.html" class="table_link">Home</a></td>
             </tr>
             <tr>
                 <td><a href="documentation.html" class="table_link">Documentation</a></td>
