--- a/website/pages/contributor.html
+++ b/website/pages/contributor.html
@@ -49,7 +49,7 @@
                 <td><a href="license.html" class="table_link">License</a></td>
             </tr>
             <tr>
-                <td><a href="contributor.html" class="table_link">Contributors</a></td>
+                <td id="current"><a href="contributor.html" class="table_link">Contributors</a></td>
             </tr>
         </table>
     </div>
