--- a/website/pages/license.html
+++ b/website/pages/license.html
@@ -61,7 +61,7 @@
                 <td><a href="../pages/support.html" class="table_link">Support</a></td>
             </tr>
             <tr>
-                <td><a href="license.html" class="table_link">License</a></td>
+                <td id="current"><a href="license.html" class="table_link">License</a></td>
             </tr>
             <tr>
                 <td><a href="contributor.html" class="table_link">Contributors</a></td>
