--- a/website/pages/support.html
+++ b/website/pages/support.html
@@ -74,7 +74,7 @@
                                 Repository</a></td>
                     </tr>
                     <tr>
-                        <td><a href="support.html" class="table_link">Support</a></td>
+                        <td id="current"><a href="support.html" class="table_link">Support</a></td>
                     </tr>
                     <tr>
                         <td><a href="../pages/license.html" class="table_link">License</a></td>
@@ -153,18 +153,14 @@
                 </ul>
                 <div class="fund_links">
                     <p class="heading">How You Can Support</p>
-                    <div>- Donate: Every contribution, big or small, helps keep Dataverse growing.
-                        <a href="https://buymeacoffee.com/tejasgupta" class="funds"><button class="design_btn"><img
-                                    src="../web_images/coffee.png" alt="">Donate</button></a><br>
-                    </div>
-                    <div>- Sponsor Us: Become a long-term partner and help fund critical project milestones.
-                        <a href="https://github.com/sponsors/multiverseweb" class="funds"><button
-                                class="design_btn"><img src="../web_images/sponsor.png" alt="">Sponsor</button></a><br>
-                    </div>
                     <div>- Contribute Code: If you're a developer, join us on GitHub to improve the platform.
                         <a href="https://github.com/multiverseweb/Dataverse" class="funds"><button
                                 class="design_btn"><img src="../web_images/github.png"
                                     alt="">Contribute</button></a><br>
+                    </div>
+                    <div><p class="fundInfo">- Sponsor Us: If you sponsor me, I'll be able to do more of what I'm already doing, better, and for you, the community, all while remaining open-source!</p>
+                        <a href="https://github.com/sponsors/multiverseweb" class="funds"><button
+                                class="design_btn"><img src="../web_images/sponsor.png" alt="">GitHub Sponsors</button></a><br>
                     </div>
                 </div>
             </div>
