--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="website/web_images/3dlogo.svg" type="image/x-icon">
 </head>
 <body>
-    <div class="error404">4<img class="logo" src="website/web_images/2dglow.png" alt="Dataverese's Logo">4</div>
+    <div class="error404">4<img class="logo" src="website/web_images/2dlogo.svg" alt="Dataverese's Logo">4</div>
     <div class="info">Oops! Page not found.</div>
         <div class="info" id="detail">We couldn't find the page you requested. It might be unavailable at the moment or have a different URL.</div>
         <a href="index.html" class="home">Return to Home</a>
