--- a/index.html
+++ b/index.html
@@ -266,43 +266,39 @@
                     <a class="subheading" href="index.html" id="last_link">Dataverse</a>
                 </div>
             </div>
-        <div class="small">
-            <div class="link_class">
-                <p class="link-category">Software Details</p>
-                <a href="404.html" class="table_link">Versions</a>
-                <a href="website/pages/license.html" class="table_link">License</a>
-                <a href="documentation.html"
-                    class="table_link">Documentation</a>
-                <a href="https://github.com/multiverseweb/Dataverse" class="table_link">GitHub Repository</a>
-            </div>
-            <div class="link_class">
-                <p class="link-category">Help & Information</p>
-                <a href="website/pages/support.html" class="table_link" target="_blank">Support</a>
-                <a href="sitemap.xml" class="table_link" target="_blank">Sitemap</a>
-                <a href="website/pages/reviews.html" class="table_link">Reviews</a>
-                <a href="./website/pages/contributor.html" class="table_link">Contributors</a>
-            </div>
-            <div class="link_class">
-                <p class="link-category">More to Explore</p>
-                <a href="404.html" class="table_link">Stunning Visuals</a>
-                <a href="https://tejasgupta.netlify.app">Owner's Portfolio</a>
-                <a href="https://www.linkedin.com/in/tejascodes/">Owner's LinkedIn</a>
-                <a href="https://github.com/multiverseweb">Owner's GitHub Profile</a>
+            <div class="small">
+                <div class="link_class">
+                    <p class="link-category">Software Details</p>
+                    <a href="404.html" class="table_link">Versions</a>
+                    <a href="website/pages/license.html" class="table_link">License</a>
+                    <a href="documentation.html" class="table_link">Documentation</a>
+                    <a href="https://github.com/multiverseweb/Dataverse" class="table_link">GitHub Repository</a>
+                </div>
+                <div class="link_class">
+                    <p class="link-category">Help & Information</p>
+                    <a href="website/pages/support.html" class="table_link" target="_blank">Support</a>
+                    <a href="sitemap.xml" class="table_link" target="_blank">Sitemap</a>
+                    <a href="website/pages/reviews.html" class="table_link">Reviews</a>
+                    <a href="./website/pages/contributor.html" class="table_link">Contributors</a>
+                </div>
+                <div class="link_class">
+                    <p class="link-category">More to Explore</p>
+                    <a href="404.html" class="table_link">Stunning Visuals</a>
+                    <a href="https://tejasgupta.netlify.app">Owner's Portfolio</a>
+                    <a href="https://www.linkedin.com/in/tejascodes/">Owner's LinkedIn</a>
+                    <a href="https://github.com/multiverseweb">Owner's GitHub Profile</a>
+                </div>
             </div>
         </div>
-    </div>
     </footer>
     <div class="links" id="linksTejas">
         <div class="end_line"></div>
-        <p class="tejas_credits" style="color:rgb(187, 187, 187); margin-top: 20px;"> Designed & Developed by <a
-                href="404.html">Tejas
+        <p class="tejas_credits" style="color:rgb(177, 177, 177);">&copy; <span id="copyright">32949832</span>
+            Dataverse.&nbsp;All rights Reserved.</p>
+        <p style="color:rgb(187, 187, 187);"> Designed & Developed by <a href="404.html">Tejas
                 Gupta</a></p>
-        <br>
-        <p style="color:rgb(177, 177, 177);">&copy; <span id="copyright">32949832</span> <a href="404.html">Tejas
-                Gupta</a></p>
+        <p>Licensed under the <a href="website/pages/license.html">CC BY-NC-ND 4.0 License</a></p>
     </div>
-    </div>
-    <div class="end_line"></div>
 
     <script>
         function validateFeedback() {
